# DISQCO

./: gcp-e-results-data.txt  gcp-s-results-data.txt  main.py  mlfm-r-results-data.txt  plot_results_data.py  pyproject.toml  results-data-fgp-roee.txt
src/disqco/parti/fgp/: benchmark_means_FGP_CP_large_5it_2-4part_new.json  benchmark_results_FGP_CP_large_5it_2-4part_new.json  fgp_testing_loop.py  fgp_testing_loop_old.ipynb
