[project]
name = "disqco"
version = "0.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy==2.2.4", 
                "qiskit==1.2.4", 
                "qiskit-aer==0.15.1", 
                "qiskit-qasm3-import==0.5.1", 
                "networkx", 
                "matplotlib",
                "pylatexenc", 
                "jupyter-tikz", 
                "ipykernel"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.uv.sources]
disqco = { workspace = true }

[dependency-groups]
dev = [
    "disqco",
]
